misc cleanups
1. Fix flaky test cases where weak values are GC'd prior to the
assertion, causing the check to fail.
2. Guava adapter's asMap() should return the same instance rather
than a new forwarder each time.
3. Resolve Gradle 7 deprecations
4. Dependency updates
5. Minor formatting